done without bonus

--- a/libft/ft_printf/Makefile
+++ b/libft/ft_printf/Makefile
@@ -3,14 +3,15 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: htam <marvin@42.fr>                        +#+  +:+       +#+         #
+#    By: htam <htam@student.42berlin.de>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/28 19:12:42 by htam              #+#    #+#              #
-#    Updated: 2022/12/28 19:12:44 by htam             ###   ########.fr        #
+#    Updated: 2023/02/26 18:50:43 by htam             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
+
 NAME := libftprintf.a
-CC := @@cc
+CC := @cc
 CFLAGS := -Werror -Wextra -Wall
 SRCS := ft_printf.c \
 		print_char.c \
@@ -24,9 +25,9 @@ $(NAME): $(OBJS)
 
 all: $(NAME)
 clean:
-	rm -f $(OBJS)
+	@rm -f $(OBJS)
 fclean:
-	rm -f $(OBJS)
-	rm -f $(NAME)
+	@rm -f $(OBJS)
+	@rm -f $(NAME)
 	@echo "\033[0;92mft_printf object file cleaned\033[0;39m"
 re: fclean all
